--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <!-- saved from url=(0104)file:///C:/Users/rsant/OneDrive/Rutgers%20BootCamp/Week%202/HomeWork/RickSantos.github.io/portfolio.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <link rel="stylesheet" href="file:///C:/Users/rsant/OneDrive/Rutgers%20BootCamp/Week%202/HomeWork/RickSantos.github.io/reset.css">
+    <link rel="stylesheet" href="./style.css">
+	
     <title>title</title>
   </head>
   <body>
@@ -20,6 +23,11 @@
   				nav
   			</p>
   		</div>
+  		<div class = "aside">
+  			<p>
+  				aside
+  			</p>
+  			</div>
   		<div class="section">
   			<p>
   				section
@@ -29,6 +37,9 @@
   					article
   				</p>
   				<div class="h1">
+  					<p>
+  						h1,h2,h3
+  					</p>
   				</div>
   				<div class="p">
   					<p>
@@ -36,61 +47,15 @@
   					</p>
   				</div>
   			</div>
+  			
+  		</div>
+  		<div class = "footer">
+  			<p>
+  				footer
+  			</p>
   		</div>
   </div>
   
 </body>
 </html>
-<style>
 
-.wrapper
-{
-	width:1200px;
-	height:800px;
-	padding:20px;
-	background-color: grey;
-}
-.header
-{
-	margin-left: 60px;
-	padding-top: 20px;
-	position:relative;
-	width: 970px;
-	height: 80px;
-	background-color: white;
-	text-align: center;
-	font-size: 20px;
-
-}
-.header p 
-{
-	margin-top: 20px;
-}
-.nav
-{
-	margin-left: 60px;
-	margin-top: 20px;
-	padding-top: 20px;
-	position:relative;
-	width: 970px;
-	height: 80px;
-	background-color: white;
-	text-align: center;
-	font-size: 20px;
-	border: 1px solid black;
-}
-.section
-{
-	margin-left: 60px;
-	text-align: center;
-	position: relative;
-	margin-top: 20px;
-	width: 500px;
-	height: 300px;
-	border: 4px solid black;
-	background-color: white;
-}
-.article
-{
-	background-color: grey;
-}
